Fix: Restrict header right-alignment to non-mobile devices to restore mobile menu visibility

--- a/src/App.scss
+++ b/src/App.scss
@@ -34,10 +34,13 @@
     }
 
     .actionSection {
-      justify-content: flex-end;
-      column-gap: 2rem;
-      padding-right: 2rem;
       flex-basis: 40%;
+
+      @media only screen and (min-width: 600px) {
+        justify-content: flex-end;
+        column-gap: 2rem;
+        padding-right: 2rem;
+      }
 
       & > * {
         cursor: pointer;
